--- a/views/index.pug
+++ b/views/index.pug
@@ -71,6 +71,13 @@ block content
 								.window__button
 							img(src=project.fields.projectPreview.fields.file.url, alt=project.fields.projectTitle)
 
+	section#about
+		.container
+			h3 About this site 
+			p I built this site using <strong>Express + Node.js</strong>, and I'm using <strong>Contentful's RESTful JSON API</strong> to deliver my blog posts and project previews. Originally, I used WordPress as a CMS for this site, but I decided to refactor with a headless CMS solution because it's so flexible. (Plus, <strong>I <i class="icon-heart" aria-hidden="true"></i><span class="screen-reader">love</span> Node.js</strong>!) 
+			p <a class="button" href="https://github.com/jendowns/portfolio-node" target="_blank">View Code on Github <i class="icon-github" aria-hidden="true"></i></a>
+
+
 	footer
 		.container
 			.flex-grid
