Minor text edit

--- a/views/index.pug
+++ b/views/index.pug
@@ -36,7 +36,7 @@ block content
 					a(href='/wordpress-sidebar', target='_blank')
 						h3 Creating a Sidebar of Categories and Posts in WordPress
 					p
-						small Posted on October 20, 2016
+						small October 20, 2016
 					p I wrote about using PHP to generate a side navigation menu, with categories as dropdown triggers and posts as dropdown list items.
 					p
 						a(href='/wordpress-sidebar', target='_blank') 
@@ -46,7 +46,7 @@ block content
 					a(href='/unity-arcade-game', target='_blank')
 						h3 2D Arcade Game in JavaScript with Unity 5
 					p
-						small Posted on April 1, 2016
+						small April 1, 2016
 					p 
 						| Using the Unity 5 engine, I made a 2D arcade game. And it's written in JavaScript! (Well, Unity's flavor of JavaScript.) I wrote an article for 
 						a.text-link(href="https://recompilermag.com/", target="_blank") The Recompiler  
