Modified some meta tags in head, moved GA tracking to head

--- a/views/header.pug
+++ b/views/header.pug
@@ -4,12 +4,8 @@ head
 	meta(content='IE=edge,chrome=1', http-equiv='X-UA-Compatible')
 	meta(content-type='text/html', charset='utf-8')    
 	meta(content='width=device-width, initial-scale=1.0', name='viewport')    
-	meta(content='Jen Downs, creative front-end developer in Austin, TX.', name='Description')
-	meta(content='YkqMlmZyGys4qjwOT4Dg1JbhRuOO_-kNB3-n94eIFV8', name='google-site-verification')
-	meta(content='noarchive,noimageindex', name='robots')
+	meta(content='Jen Downs is a creative front-end developer in Austin, TX.', name='Description')
 	meta(content='NOODP', name='googlebot')
-	meta(content='nositelinkssearchbox', name='google')
-	meta(content='notranslate', name='google')
 	meta(property="og:url", content="https://jendowns.com/")
 	meta(property="og:author", content="Jen Downs")
 	meta(property="og:type", content="profile")
@@ -25,5 +21,16 @@ head
 	meta(property="twitter:image:alt", content="Jen's Dogs, Luna and Ash, sitting next to each other.")
 	meta(property="twitter:description", content="Jen Downs is a creative front-end developer in Austin, Texas.")
 
-	link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900')
+	link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:400,400i,700,900')
 	link(rel='stylesheet', href='/stylesheets/style.css')
+
+	script(type='text/javascript').
+
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-72766756-2', 'auto');
+		ga('send', 'pageview');
+
