--- a/views/index.pug
+++ b/views/index.pug
@@ -9,15 +9,15 @@ block content
 				li
 					a(href='https://www.twitter.com/jenisora', target='_blank', title='Twitter')
 						i.icon.icon-twitter(aria-hidden="true") 
-						span.screen-reader Twitter
+						span.screen-reader jenisora on Twitter
 				li    
 					a(href='https://www.codepen.io/jendowns', target='_blank', title='Codepen')
 						i.icon.icon-codepen(aria-hidden="true") 
-						span.screen-reader Codepen
+						span.screen-reader jendowns on Codepen
 				li    
 					a(href='https://www.github.com/jendowns', target='_blank', title='GitHub')
 						i.icon.icon-github(aria-hidden="true") 
-						span.screen-reader GitHub
+						span.screen-reader jendowns on GitHub
 
 	section#posts
 		.container
@@ -74,7 +74,7 @@ block content
 	section#about
 		.container
 			h3 About this site 
-			p I built this site using <strong>Express + Node.js</strong>, and I'm using <strong>Contentful's RESTful JSON API</strong> to deliver my blog posts and project previews. Originally, I used WordPress as a CMS for this site, but I decided to refactor with a headless CMS solution because it's so flexible. (Plus, <strong>I <i class="icon-heart" aria-hidden="true"></i><span class="screen-reader">love</span> Node.js</strong>!) 
+			p I built this site using <strong>Node.js + Express</strong>, and I'm using <strong>Contentful's RESTful JSON API</strong> to deliver my blog posts and project previews. Originally, I used WordPress as a CMS for this site, but I decided to refactor with a headless CMS solution because it's so flexible. (Plus, <strong>I <i class="icon-heart" aria-hidden="true"></i><span class="screen-reader">love</span> Node.js</strong>!) 
 			p <a class="button" href="https://github.com/jendowns/portfolio-node" target="_blank">View Code on Github <i class="icon-github" aria-hidden="true"></i></a>
 
 
@@ -104,15 +104,7 @@ block content
 							span.screen-reader GitHub
 
 	script(type='text/javascript').
-		console.log("( ^ o ^ )/");
-
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-72766756-2', 'auto');
-		ga('send', 'pageview');
+		console.log("✨ Hello there! ✨");
 
 
 	
