--- a/views/single.pug
+++ b/views/single.pug
@@ -42,14 +42,6 @@ block content
 
 	script(type='text/javascript', src='js/highlight.pack.js')
 	script(type='text/javascript').
-		console.log("( ^ o ^ )/");
+		console.log("✨ Hello there! ✨");
 		hljs.initHighlightingOnLoad();
-
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-72766756-2', 'auto');
-		ga('send', 'pageview');
 
