Added schema.org JSON-LD

--- a/views/header.pug
+++ b/views/header.pug
@@ -34,3 +34,13 @@ head
 		ga('create', 'UA-72766756-2', 'auto');
 		ga('send', 'pageview');
 
+	script(type='application/ld+json').
+		{
+			"@context": "http://schema.org/",
+			"@type": "Person",
+			"name": "Jen Downs",
+			"jobTitle": "Front-End Developer",
+			"url": "http://www.jendowns.com"
+		}
+
+
