SM meta tag updates, plus new summary picture

--- a/views/header.pug
+++ b/views/header.pug
@@ -8,16 +8,16 @@ head
 	meta(content='NOODP', name='googlebot')
 	meta(property="og:url", content="https://jendowns.com/")
 	meta(property="og:author", content="Jen Downs")
-	meta(property="og:type", content="profile")
+	meta(property="og:type", content="website")
 	meta(property="og:title", content="Jen Downs, front-end developer")
-	meta(property="og:image", content="http://jen.li/good-dogs/wp-content/themes/good-dogs/images/cover.jpg")
+	meta(property="og:image", content="http://www.jendowns.com/images/workspace.png")
 	meta(property="og:image:width", content="500")
-	meta(property="og:image:height", content="362")
+	meta(property="og:image:height", content="325")
 	meta(property="og:description", content="Jen Downs is a creative front-end developer in Austin, Texas.")
-	meta(name="twitter:card", content="summary")
+	meta(name="twitter:card", content="summary_large_image")
 	meta(property="twitter:creator", content="@jenisora")
 	meta(property="twitter:title", content="Jen Downs, front-end developer")
-	meta(property="twitter:image", content="http://jen.li/good-dogs/wp-content/themes/good-dogs/images/cover.jpg")
+	meta(property="twitter:image", content="http://www.jendowns.com/images/workspace.png")
 	meta(property="twitter:image:alt", content="Jen's Dogs, Luna and Ash, sitting next to each other.")
 	meta(property="twitter:description", content="Jen Downs is a creative front-end developer in Austin, Texas.")
 
