Fixed og:url meta tag

--- a/views/header.pug
+++ b/views/header.pug
@@ -6,7 +6,7 @@ head
 	meta(content='width=device-width, initial-scale=1.0', name='viewport')    
 	meta(content='Jen Downs is a creative front-end developer in Austin, TX.', name='Description')
 	meta(content='NOODP', name='googlebot')
-	meta(property="og:url", content="https://jendowns.com/")
+	meta(property="og:url", content="http://www.jendowns.com/")
 	meta(property="og:author", content="Jen Downs")
 	meta(property="og:type", content="website")
 	meta(property="og:title", content="Jen Downs, front-end developer")
