Revised 'about this site' section + made additional updates to meta tags in head

--- a/views/header.pug
+++ b/views/header.pug
@@ -1,25 +1,24 @@
 
 head
-	title Jen Downs, front-end developer
+	title Jen Downs Online
 	meta(content='IE=edge,chrome=1', http-equiv='X-UA-Compatible')
 	meta(content-type='text/html', charset='utf-8')    
 	meta(content='width=device-width, initial-scale=1.0', name='viewport')    
-	meta(content='Jen Downs is a creative front-end developer in Austin, TX.', name='Description')
+	meta(content='Jen shares her thoughts about front-end development and projects she has been working on.', name='Description')
 	meta(content='NOODP', name='googlebot')
 	meta(property="og:url", content="http://www.jendowns.com/")
-	meta(property="og:author", content="Jen Downs")
 	meta(property="og:type", content="website")
-	meta(property="og:title", content="Jen Downs, front-end developer")
+	meta(property="og:title", content="Jen Downs Online")
 	meta(property="og:image", content="http://www.jendowns.com/images/workspace.png")
+	meta(property="og:description", content="Jen shares her thoughts about front-end development and projects she has been working on.")
 	meta(property="og:image:width", content="500")
 	meta(property="og:image:height", content="325")
-	meta(property="og:description", content="Jen Downs is a creative front-end developer in Austin, Texas.")
 	meta(name="twitter:card", content="summary_large_image")
 	meta(property="twitter:creator", content="@jenisora")
-	meta(property="twitter:title", content="Jen Downs, front-end developer")
+	meta(property="twitter:title", content="Jen Downs Online")
 	meta(property="twitter:image", content="http://www.jendowns.com/images/workspace.png")
-	meta(property="twitter:image:alt", content="Jen's Dogs, Luna and Ash, sitting next to each other.")
-	meta(property="twitter:description", content="Jen Downs is a creative front-end developer in Austin, Texas.")
+	meta(property="twitter:image:alt", content="A workspace with a macbook and a cup of tea.")
+	meta(property="twitter:description", content="Jen shares her thoughts about front-end development and projects she has been working on.")
 
 	link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:400,400i,700,900')
 	link(rel='stylesheet', href='/stylesheets/style.css')
