Added new key icon + keybase links

--- a/sass/icomoon.scss
+++ b/sass/icomoon.scss
@@ -5,12 +5,12 @@ ICOMOON.IO Icons
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('/fonts/icomoon.eot?erg7pk');
-  src:  url('/fonts/icomoon.eot?erg7pk#iefix') format('embedded-opentype'),
-    url('/fonts/icomoon.woff2?erg7pk') format('woff2'),
-    url('/fonts/icomoon.ttf?erg7pk') format('truetype'),
-    url('/fonts/icomoon.woff?erg7pk') format('woff'),
-    url('/fonts/icomoon.svg?erg7pk#icomoon') format('svg');
+  src:  url('/fonts/icomoon.eot?pfv0pq');
+  src:  url('/fonts/icomoon.eot?pfv0pq#iefix') format('embedded-opentype'),
+    url('/fonts/icomoon.woff2?pfv0pq') format('woff2'),
+    url('/fonts/icomoon.ttf?pfv0pq') format('truetype'),
+    url('/fonts/icomoon.woff?pfv0pq') format('woff'),
+    url('/fonts/icomoon.svg?pfv0pq#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,6 +30,9 @@ ICOMOON.IO Icons
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-key:before {
+  content: "\e901";
+}
 .icon-paperplane:before {
   content: "\e900";
 }
@@ -54,6 +57,10 @@ ICOMOON.IO Icons
 .icon-open:before {
   content: "\e128";
 }
+
+
+
+
 
 
 
