--- a/views/index.pug
+++ b/views/index.pug
@@ -18,6 +18,10 @@ block content
 					a(href='https://www.github.com/jendowns', target='_blank', title='GitHub')
 						i.icon.icon-github(aria-hidden="true") 
 						span.screen-reader jendowns on GitHub
+				li    
+					a(href='https://keybase.io/jeni', target='_blank', title='Keybase.io')
+						i.icon.icon-key(aria-hidden="true") 
+						span.screen-reader jeni on Keybase.io
 
 	section#posts
 		.container
@@ -69,7 +73,7 @@ block content
 								.window__button
 								.window__button
 								.window__button
-							img(src=project.fields.projectPreview.fields.file.url, alt=project.fields.projectTitle)
+							img(src=project.fields.projectPreview.fields.file.url, alt="Screenshot of the project website.")
 
 	section#about
 		.container
@@ -102,6 +106,10 @@ block content
 						a(href='https://www.github.com/jendowns', target='_blank', title='GitHub')
 							i.icon.icon-github(aria-hidden="true") 
 							span.screen-reader GitHub
+					li
+						a(href='https://keybase.io/jeni', target='_blank', title='Keybase.io')
+							i.icon.icon-key(aria-hidden="true") 
+							span.screen-reader jeni on Keybase.io
 
 	script(type='text/javascript').
 		console.log("✨ Hello there! ✨");
