Added &nbsp; around the heart icon in the footer

--- a/views/index.pug
+++ b/views/index.pug
@@ -37,7 +37,7 @@ block content
 								.window__button
 								.window__button
 							img(src=project.fields.projectPreview.fields.file.url, alt="Screenshot of the project website.")
-								
+
 	section#posts
 		.container
 			.flex-grid
@@ -89,10 +89,10 @@ block content
 					li
 						small &copy; 2017 Jen Downs.
 					li
-						small Made with
+						small Made with&nbsp;
 							i.icon.icon-heart
 							span.screen-reader love
-							|  in Austin, TX.
+							| &nbsp;in Austin, TX.
 				ul
 					li
 						a(href='https://www.twitter.com/jenisora', target='_blank', title='Twitter')
