--- a/views/index.pug
+++ b/views/index.pug
@@ -51,6 +51,7 @@ block content
 						p
 							a(href=post.fields.slug) Read More
 
+				//- This is an external post & therefore isn't saved in Contentful
 				article
 					a(href='/wordpress-sidebar', target='_blank')
 						h3 Creating a Sidebar of Categories and Posts in WordPress
@@ -61,6 +62,8 @@ block content
 						a(href='/wordpress-sidebar', target='_blank')
 							| Read More &nbsp;
 							i.icon.icon-open(aria-hidden="true")
+								
+				//- This is an external post & therefore isn't saved in Contentful
 				article
 					a(href='/unity-arcade-game', target='_blank')
 						h3 2D Arcade Game in JavaScript with Unity 5
