--- a/views/404.pug
+++ b/views/404.pug
@@ -6,7 +6,7 @@ block content
 			img(src="/images/pbg.gif", alt="Princess Bubblegum from the cartoon 'Adventure Time' flipping a table in anger.", width="375", style="padding: 16px 0;")
 		.center
 			h2.center 404 - Page Not Found!
-			p.center What the nuts?! I can't find this page at all.
+			p.center Yikes! I can't find this page at all.
 			p.center Let's get out of here...
 			p.center
 				a.text-link(href="/") 
