Added keybase.io link to footer on blog post pages

--- a/views/single.pug
+++ b/views/single.pug
@@ -39,9 +39,12 @@ block content
 						a(href='https://www.github.com/jendowns', target='_blank', title='GitHub')
 							i.icon.icon-github(aria-hidden="true") 
 							span.screen-reader GitHub
+					li
+						a(href='https://keybase.io/jeni', target='_blank', title='Keybase.io')
+							i.icon.icon-key(aria-hidden="true")
+							span.screen-reader jeni on Keybase.io
 
 	script(type='text/javascript', src='js/highlight.pack.js')
 	script(type='text/javascript').
 		console.log("✨ Hello there! ✨");
 		hljs.initHighlightingOnLoad();
-
