--- a/sass/style.scss
+++ b/sass/style.scss
@@ -73,7 +73,6 @@ h2 {
 h3 {
 	@include calc-font-flow(18);
 	font-weight: 900;
-	color: darken($toolbar--gray, 60%);
 }
 
 a {
@@ -178,7 +177,7 @@ header {
 
 	li {
 		display: inline-block;
-		padding: ($--baseline / 2 + px) ($--baseline / 2 + px);
+		padding: ($--baseline / 2 + px) ($--baseline / 1.5 + px);
 
 		&:first-child {
 			padding-left: 0;
@@ -202,6 +201,14 @@ header {
 
 #posts {
 	background-color: lighten($toolbar--gray, 10%);
+
+  h2 {
+    color: darken($toolbar--gray, 60%);
+  }
+  h3 {
+  	color: darken($toolbar--gray, 60%);
+    margin-bottom: 0;
+  }
 }
 
 article {
@@ -211,10 +218,6 @@ article {
 	border: 1px solid $toolbar--gray;
 	padding: $--baseline + px;
 	@include border-radius(6);
-
-	h3 {
-		margin-bottom: 0;
-	}
 
 	small {
 		@include calc-font-flow(12);
@@ -239,7 +242,7 @@ article {
 #about {
 	background-color: $purple;
 
-	h3, p {
+	h2, p {
 		color: #fff;
 	}
 
@@ -261,26 +264,23 @@ article {
 			padding-left: 5px;
 		}
 	}
-
-	h3 {
-		font-weight: 900;
-	}
 }
 
-#project h3 {
-	font-weight: 700;
-	color: darken($purple, 30%);
-}
-
-#project, #about {
+#projects, #about {
 
 	h3 {
-		@include calc-font-flow(24);
+		@include calc-font-flow(20);
 	}
 
 	p {
 		@include calc-font-flow(18);
 	}
+}
+
+#projects {
+  h2, h3 {
+    color: darken($purple, 30%);
+  }
 }
 
 .flex-grid {
@@ -374,7 +374,7 @@ footer {
 
 		li {
 			display: inline-block;
-			padding: ($--baseline / 2 + px) ($--baseline + px);
+			padding: ($--baseline / 2 + px) ($--baseline / 1.5 + px);
 
 			&:first-child {
 				padding-left: 0;
@@ -552,7 +552,7 @@ nav {
 		@include calc-font-flow(30);
 	}
 
-	h3, #project h3 {
+	h3, #projects h3 {
 		@include calc-font-flow(20);
 	}
 
@@ -572,7 +572,7 @@ nav {
 		padding-right: 0;
 	}
 
-	#project p, #about p {
+	#projects p, #about p {
 		@include calc-font-flow(15);
 	}
 
