--- a/views/header.pug
+++ b/views/header.pug
@@ -1,43 +1,44 @@
 html(lang="en")
 	head
-		title Jen Downs Online
+		title Code by Jen Downs
 		meta(content='IE=edge,chrome=1', http-equiv='X-UA-Compatible')
 		meta(content-type='text/html', charset='utf-8')
 		meta(content='width=device-width, initial-scale=1.0', name='viewport')
-		meta(content='Jen shares her thoughts about front-end development and projects she has been working on.', name='Description')
+		meta(content='Jen shares her thoughts about front end development + design and her current projects.', name='Description')
 		meta(content='NOODP', name='googlebot')
-		meta(property="og:url", content="http://www.jendowns.com/")
+		meta(property="og:url", content="http://jendowns.com/")
 		meta(property="og:type", content="website")
-		meta(property="og:title", content="Jen Downs Online")
-		meta(property="og:image", content="http://www.jendowns.com/images/workspace.png")
-		meta(property="og:description", content="Jen shares her thoughts about front-end development and projects she has been working on.")
+		meta(property="og:title", content="Code by Jen Downs")
+		meta(property="og:image", content="http://jendowns.com/images/workspace.png")
+		meta(property="og:description", content="Jen shares her thoughts about front end development + design and her current projects.")
 		meta(property="og:image:width", content="500")
 		meta(property="og:image:height", content="325")
 		meta(name="twitter:card", content="summary_large_image")
 		meta(property="twitter:creator", content="@jenisora")
-		meta(property="twitter:title", content="Jen Downs Online")
-		meta(property="twitter:image", content="http://www.jendowns.com/images/workspace.png")
+		meta(property="twitter:title", content="Code by Jen Downs")
+		meta(property="twitter:image", content="http://jendowns.com/images/workspace.png")
 		meta(property="twitter:image:alt", content="A workspace with a macbook and a cup of tea.")
-		meta(property="twitter:description", content="Jen shares her thoughts about front-end development and projects she has been working on.")
+		meta(property="twitter:description", content="Jen shares her thoughts about front end development + design and her current projects.")
 
 		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:400,400i,700,900')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 
-		script(type='text/javascript').
+		//-
+			script(type='text/javascript').
 
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+				})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-			ga('create', 'UA-72766756-2', 'auto');
-			ga('send', 'pageview');
+				ga('create', 'UA-72766756-2', 'auto');
+				ga('send', 'pageview');
 
 		script(type='application/ld+json').
 			{
 				"@context": "http://schema.org/",
 				"@type": "Person",
 				"name": "Jen Downs",
-				"jobTitle": "Front-End Developer",
-				"url": "http://www.jendowns.com"
+				"jobTitle": "Front End Developer",
+				"url": "http://jendowns.com"
 			}
