--- a/views/index.pug
+++ b/views/index.pug
@@ -4,18 +4,18 @@ block content
 	header
 		.container
 			h1 Jen Downs
-			h2 Front-end developer
+			h2 code + design
 			ul
 				li
-					a(href='https://www.twitter.com/jenisora', target='_blank', title='Twitter')
+					a(href='https://twitter.com/jenisora', target='_blank', title='Twitter')
 						i.icon.icon-twitter(aria-hidden="true")
 						span.screen-reader jenisora on Twitter
 				li
-					a(href='https://www.codepen.io/jendowns', target='_blank', title='Codepen')
+					a(href='https://codepen.io/jendowns', target='_blank', title='Codepen')
 						i.icon.icon-codepen(aria-hidden="true")
 						span.screen-reader jendowns on Codepen
 				li
-					a(href='https://www.github.com/jendowns', target='_blank', title='GitHub')
+					a(href='https://github.com/jendowns', target='_blank', title='GitHub')
 						i.icon.icon-github(aria-hidden="true")
 						span.screen-reader jendowns on GitHub
 				li
@@ -73,7 +73,7 @@ block content
 						small April 1, 2016
 					p
 						| Using the Unity 5 engine, I made a 2D arcade game. And it's written in JavaScript! (Well, Unity's flavor of JavaScript.) I wrote an article for
-						a.text-link(href="https://recompilermag.com/", target="_blank") The Recompiler
+						a.text-link(href="https://recompilermag.com/", target="_blank")  The Recompiler 
 						| about how I made this game.
 					p
 						a(href='/unity-arcade-game', target='_blank')
@@ -117,4 +117,6 @@ block content
 							span.screen-reader jeni on Keybase.io
 
 	script(type='text/javascript').
-		console.log("✨ Hello there! ✨");
+		console.log();
+		console.log("%c💁🏻 Hello there!", "color: #8971d0; font-size: 14px;font-weight: 700; padding: 4px; border: 2px solid #8971d0;");
+		console.log();
