--- a/views/single.pug
+++ b/views/single.pug
@@ -46,5 +46,7 @@ block content
 
 	script(type='text/javascript', src='js/highlight.pack.js')
 	script(type='text/javascript').
-		console.log("✨ Hello there! ✨");
+		console.log();
+		console.log("%c💁🏻 Hello there!", "color: #8971d0; font-size: 14px;font-weight: 700; padding: 4px; border: 2px solid #8971d0;");
+		console.log();
 		hljs.initHighlightingOnLoad();
