--- a/sass/style.scss
+++ b/sass/style.scss
@@ -82,6 +82,7 @@ a {
 	text-decoration: none;
 	font-size: inherit;
 	line-height: inherit;
+  border-bottom: 2px solid transparent;
 	@include transition(all, 200ms);
 
 	&:hover, &:focus {
@@ -89,6 +90,10 @@ a {
 		text-decoration: none;
 		border-bottom: 2px solid darken($purple, 10%);
 	}
+}
+
+.social-icons a {
+  border: 0px;
 }
 
 small, small a {
@@ -153,6 +158,7 @@ em {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
+  flex-direction: row;
 }
 
 
@@ -200,7 +206,7 @@ header {
 --------------------------*/
 
 #posts {
-	background-color: lighten($toolbar--gray, 10%);
+	background-color: lighten($toolbar--gray, 8%);
 
   h2 {
     color: darken($toolbar--gray, 60%);
@@ -234,6 +240,38 @@ article {
 	}
 }
 
+/* ------------------------
+	ME/INTRO
+--------------------------*/
+
+#me {
+  background-color: lighten($toolbar--gray, 8%);
+
+  .flex-grid {
+    flex-wrap: nowrap;
+  }
+
+  .me__pic {
+    width: 250px;
+    height: 250px;
+    flex-shrink: 0;
+
+    img {
+      width: 100%;
+      height: auto;
+      display: block;
+      @include border-radius(6);
+    }
+  }
+
+  .me__desc {
+    padding-left: 3%;
+  }
+
+  p {
+    @include calc-font-flow(20);
+  }
+}
 
 /* ------------------------
 	PROJECTS & ABOUT
@@ -523,6 +561,10 @@ nav {
 	.single .container {
 		padding: 0;
 	}
+
+  #me .me__desc p {
+    @include calc-font-flow(18);
+  }
 }
 
 
@@ -563,6 +605,20 @@ nav {
 	.flex-grid {
 		display: block;
 	}
+
+  #me {
+    .me__pic {
+      @include center-element;
+      width: 200px;
+      height: 200px;
+    }
+    .me__desc {
+      padding-left: 0;
+      padding-top: $--baseline + px;
+
+      p { @include calc-font-flow(16); }
+    }
+  }
 
 	.project__window, .project__info, footer ul {
 		width: 98%;
