--- a/views/index.pug
+++ b/views/index.pug
@@ -107,15 +107,15 @@ block content
 							| &nbsp;in Austin, TX.
 				ul.social-icons
 					li
-						a(href='https://www.twitter.com/jenisora', target='_blank', title='Twitter')
+						a(href='https://twitter.com/jenisora', target='_blank', title='Twitter')
 							i.icon.icon-twitter(aria-hidden="true")
 							span.screen-reader Twitter
 					li
-						a(href='https://www.codepen.io/jendowns', target='_blank', title='Codepen')
+						a(href='https://codepen.io/jendowns', target='_blank', title='Codepen')
 							i.icon.icon-codepen(aria-hidden="true")
 							span.screen-reader Codepen
 					li
-						a(href='https://www.github.com/jendowns', target='_blank', title='GitHub')
+						a(href='https://github.com/jendowns', target='_blank', title='GitHub')
 							i.icon.icon-github(aria-hidden="true")
 							span.screen-reader GitHub
 					li
