--- a/views/index.pug
+++ b/views/index.pug
@@ -26,7 +26,7 @@ block content
 		.container
 			.flex-grid
 				.me__pic
-					img(src='/images/me.jpg', alt='A picture of Jen Downs.')
+					img(src='/images/photo.jpeg', alt='A picture of Jen Downs.')
 				.me__desc.center-vertically
 					p Hey there, I'm Jen! 👋 I'm a front-end developer &amp; designer living in Austin, TX. I'm very passionate about learning new front-end technologies and using <a href="https://www.ibm.com/design/language/experience/front-end/fundamentals/">code as a design tool</a> to create compelling online experiences.
 					p You can <a href="https://twitter.com/jenisora">find me on Twitter</a>, where I mostly talk about my latest projects, my two awesome dogs, and video games. 🎮
