--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -15,6 +15,6 @@ $toolbar--gray: rgb(222, 222, 222);
 
 
 // 2. Fonts
-$font--heading: 'Lato', Helvetica, Arial, Verdana, sans-serif;
-$font--title: 'Lato', Helvetica, Arial, Verdana, sans-serif;
-$font--body: 'Lato', Helvetica, Arial, Verdana, sans-serif;
+$font--heading: 'Raleway', Helvetica, Arial, Verdana, sans-serif;
+$font--title: 'Raleway', Helvetica, Arial, Verdana, sans-serif;
+$font--body: 'Raleway', Helvetica, Arial, Verdana, sans-serif;
