--- a/views/header.pug
+++ b/views/header.pug
@@ -20,7 +20,7 @@ html(lang="en")
 		meta(property="twitter:image:alt", content="A workspace with a macbook and a cup of tea.")
 		meta(property="twitter:description", content="Jen shares her thoughts about front end development + design and her current projects.")
 
-		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:400,400i,700,900')
+		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 
 		//-
